@@ -21,12 +21,12 @@
     <pcl level="3e"/>
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
-    <parallel>
-      <commandset>MLC,PCL,PML,DW-PCL,DYN,DESKJET</commandset>
-      <description>hp deskjet 6540</description>
-      <manufacturer>hp</manufacturer>
-      <model>deskjet 6540</model>
-    </parallel>
+    <usb>
+      <commandset>LC,PCL,PML,DW-PCL,DESKJET,DYN</commandset>
+      <description>6540</description>
+      <manufacturer>HP</manufacturer>
+      <model>Deskjet 6500</model>
+    </usb>
   </autodetect>
   <functionality>B</functionality>
   <driver>hpijs</driver>
