@@ -1,5 +1,8 @@
 2005-02-08  Tim Waugh <twaugh@redhat.com>
 
+	* printer/HP-DeskJet_6540.xml: Corrected IEEE 1284 information (RH
+	  bug #147288).
+
 	* printer/Epson-Stylus_C82.xml: Added IEEE 1284 information (RH
 	  bug #147230).
 
